tests/baselines/reference/parserExportAssignment3.errors.txt
parserExportAssignment3.ts(1,9): error TS1109: Expression expected.


==== parserExportAssignment3.ts (1 errors) ====
    export =
            
!!! error TS1109: Expression expected.